--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -27,19 +27,6 @@
   margin-bottom: 1em;
 }
 
-.home-subheader .learn-more {
-  font-family: "Open Sans";
-  font-size: .9em;
-  color: #004b7e;
-  padding-top: .5em;
-  padding-bottom: .5em;
-  padding-left: 2em;
-  padding-right: 2em;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  border: 1px solid #004b7e;
-}
-
 
 #home_header h1 {
 color: #fff;
